objects/Competitor_Products__c.object
<CustomObject>
    <description>List of the competitor products will be stored here</description>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Business Type of Competitor Products</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Slice</fullName>
                </value>
                <value>
                    <fullName>Cede</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>Cancellation date of Competitor Products</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Related to the Carrier</description>
        <label>Competitor / 3rd Party Vendor</label>
        <referenceTo>Competitor_Relationship__c</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_Account__c</fullName>
        <description>Carrier Account Name</description>
        <formula>Carrier__r.Competitor_Account__r.Name</formula>
        <label>Competitor Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <description>Competitor Products Contracts</description>
        <label>Contracts</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Date from which the Competitor Products will be effective</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <description>Group Account Name related to Carrier</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Carrier__r.Group_Account__r.Id, Carrier__r.Group_Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Members__c</fullName>
        <description>Count of the members associated</description>
        <label>Members</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offered_on_Private_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether a Carrier or Vendor offers the product on a private exchange</description>
        <label>Offered on Private Exchange?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Category of the associated Product</description>
        <formula>TEXT( Product__r.Product_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>Family of the Product associated</description>
        <formula>TEXT(Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the Product</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor Product</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Date on which the Competitor Products will be renewed</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sliced_Carveout__c</fullName>
        <description>This indicates if this field is sliced or if it is a carve out field</description>
        <label>Split/Carve out</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Carve Out</fullName>
                </value>
                <value>
                    <fullName>Sliced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Competitor Products</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitors / 3rd Party Vendor Products</label>
    <nameField>
        <displayFormat>CP-{00000000}</displayFormat>
        <label>Competitor Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors / 3rd Party Vendor Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Renewal_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Renewal_Date__c &lt; Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Renewal_Date__c</errorDisplayField>
        <errorMessage>The Renewal Date cannot be an earlier date than the Effective Date.</errorMessage>
    </validationRules>
</CustomObject>